@@ -14,6 +14,8 @@ FIXES
 
  * CreateModifyCard widget with null Reference cannot be configured
 
+ * History tab rows doesn't display relation attributes
+
 
 
 
